fix(styles): visible overflow when more dropdown is available [ci visual] (#4931)

--- a/packages/doc-ui/src/components/DocsPage/custom.scss
+++ b/packages/doc-ui/src/components/DocsPage/custom.scss
@@ -679,10 +679,6 @@ body.sb-show-main {
   height: 11rem;
 }
 
-.fddocs-icon-tab-container .fd-icon-tab-bar__header {
-  overflow: visible;
-}
-
 @media (max-width: 600px) {
   .sbdocs-preview {
     min-width: calc(100% + 20px * 2);
